--- a/app/src/main/res/layout/activity_home_bottom.xml
+++ b/app/src/main/res/layout/activity_home_bottom.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="50dp"
-              android:background="@color/colorBottom"
+              android:background="@color/bg_white"
               android:orientation="horizontal">
 
     <Button
