--- a/app/src/main/res/layout/home_item_ad.xml
+++ b/app/src/main/res/layout/home_item_ad.xml
@@ -8,6 +8,8 @@
     android:layout_gravity="center"
     android:layout_marginLeft="1dp"
     android:layout_marginRight="1dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/colorBackground"
     card_view:cardCornerRadius="5dp"
