--- a/app/src/main/res/layout/home_item_tab_title.xml
+++ b/app/src/main/res/layout/home_item_tab_title.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/home_tab_title"
-        android:layout_width="350px"
-        android:layout_height="120px"
+        android:layout_width="match_parent"
+        android:layout_height="180px"
+        android:layout_margin="5px"
         android:layout_gravity="center_horizontal"
-        android:background="@color/bg_white"
         android:scaleType="centerCrop"/>
 
 </com.zhy.autolayout.AutoLinearLayout>
