--- a/app/src/main/res/layout/home_top.xml
+++ b/app/src/main/res/layout/home_top.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.zhy.autolayout.AutoLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bg_white"
@@ -9,32 +10,32 @@
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="600px"/>
+        android:layout_height="720px"/>
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="10px"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/home_menu_1"
             android:layout_width="match_parent"
-            android:layout_height="300px"
+            android:layout_height="350px"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"/>
 
         <ImageView
             android:id="@+id/home_menu_2"
             android:layout_width="match_parent"
-            android:layout_height="300px"
+            android:layout_height="350px"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"/>
 
         <ImageView
             android:id="@+id/home_menu_3"
             android:layout_width="match_parent"
-            android:layout_height="300px"
+            android:layout_height="350px"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             />
@@ -42,17 +43,68 @@
         <ImageView
             android:id="@+id/home_menu_4"
             android:layout_width="match_parent"
-            android:layout_height="300px"
+            android:layout_height="350px"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"/>
 
         <ImageView
             android:id="@+id/home_menu_5"
             android:layout_width="match_parent"
-            android:layout_height="300px"
+            android:layout_height="350px"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"/>
 
+    </com.zhy.autolayout.AutoLinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5px"
+        android:background="@color/colorLine"/>
+
+    <com.zhy.autolayout.AutoLinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="180px"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20px"
+            android:layout_weight="2.5"
+            android:text="最新动态："
+            android:textColor="@color/tv_name"
+            android:textSize="15sp"/>
+
+        <com.sunfusheng.marqueeview.MarqueeView
+            android:id="@+id/marqueeView"
+            android:layout_width="0dp"
+            android:layout_height="80px"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10px"
+            android:layout_weight="7"
+            app:mvAnimDuration="1000"
+            app:mvInterval="3000"
+            app:mvTextColor="@color/tv_hint"
+            app:mvTextSize="15sp"/>
+
+        <View
+            android:layout_width="5px"
+            android:layout_height="50px"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="20px"
+            android:background="@color/colorLine"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10px"
+            android:layout_weight="1"
+            android:text="更多"
+            android:textColor="@color/tv_name"
+            android:textSize="15sp"/>
     </com.zhy.autolayout.AutoLinearLayout>
 
 
