MVP模式架构重构，首页增加下拉刷新与状态管理，新增欢迎界面与引导界面，

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,21 +4,27 @@
              android:layout_height="match_parent">
 
 
-    <include layout="@layout/home_header"/>
-
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/home_swipeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical">
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/home_list"
+        <com.youth.xframe.widget.loadingview.XLoadingView
+            android:id="@+id/home_loadingView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/home_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </com.youth.xframe.widget.loadingview.XLoadingView>
+
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <include layout="@layout/home_header"/>
 
 </FrameLayout>
