--- a/app/src/main/res/layout/guide_second.xml
+++ b/app/src/main/res/layout/guide_second.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="产品详情页面"
-        android:textSize="200px"/>
+        android:text="引导页面2"
+        android:textSize="250px"/>
 
 </com.zhy.autolayout.AutoRelativeLayout>
