--- a/app/src/main/res/layout/catrgory_header.xml
+++ b/app/src/main/res/layout/catrgory_header.xml
@@ -6,55 +6,58 @@
     android:id="@+id/home_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
-    android:background="@color/colorPrimaryDark"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
+        android:layout_height="wrap_content"
+        android:background="@color/bg_white"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/act_home_btn_scan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40px"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10px"
             android:layout_weight="1"
             android:background="@color/colorTransparency"
             android:button="@null"
-            android:drawableTop="@drawable/act_home_scan"
+            android:drawableTop="@drawable/act_home_scan_de"
             android:text="@string/act_home_top_scan"
-            android:textColor="@color/bg_white"
+            android:textColor="@color/tv_hint"
             android:textSize="@dimen/act_top_font"/>
 
         <EditText
             android:id="@+id/frag_home_et_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20px"
             android:layout_weight="8"
-            android:background="@drawable/search_bg"
-            android:drawableLeft="@drawable/act_home_search"
+            android:background="@drawable/catrgory_search_bg"
+            android:drawableLeft="@drawable/act_home_search_de"
             android:hint="搜索关键字"
             android:singleLine="true"
             android:textColor="@color/tv_name"
             android:textColorHint="@color/tv_hint"
-            android:textSize="40px"/>
+            android:textSize="50px"/>
 
         <Button
             android:id="@+id/act_home_btn_msg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10px"
             android:layout_weight="1"
             android:background="@color/colorTransparency"
             android:button="@null"
-            android:drawableTop="@drawable/act_home_msg"
+            android:drawableTop="@drawable/act_home_msg_de"
             android:text="@string/act_home_top_msg"
-            android:textColor="@color/bg_white"
+            android:textColor="@color/tv_hint"
             android:textSize="@dimen/act_top_font"/>
 
     </com.zhy.autolayout.AutoLinearLayout>
