--- a/app/src/main/res/layout/home_item_ad.xml
+++ b/app/src/main/res/layout/home_item_ad.xml
@@ -4,23 +4,30 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginLeft="1dp"
-    android:layout_marginRight="1dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="20px"
+    android:layout_marginRight="20px"
+    android:layout_marginTop="26.5px"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/colorBackground"
     card_view:cardCornerRadius="5dp"
     card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/home_ad_img"
+    <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:layout_height="392px">
+
+
+        <ImageView
+            android:id="@+id/home_ad_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"/>
+
+
+    </com.zhy.autolayout.AutoLinearLayout>
 
 
 </android.support.v7.widget.CardView>
