--- a/app/src/main/res/layout/home_item_category.xml
+++ b/app/src/main/res/layout/home_item_category.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bg_white"
+
     android:orientation="vertical">
 
 
@@ -14,9 +15,8 @@
 
         <ImageView
             android:id="@+id/home_catrgory_img"
-            android:layout_width="0px"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="6"
             android:scaleType="fitXY"/>
 
 
