--- a/app/src/main/res/layout/home_item_tab.xml
+++ b/app/src/main/res/layout/home_item_tab.xml
@@ -7,15 +7,16 @@
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="450px"
+        android:layout_height="445px"
+        android:layout_marginTop="5px"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/home_tab_img1"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_margin="5px"
-            android:layout_weight="6"
+            android:layout_marginRight="5px"
+            android:layout_weight="5"
             android:scaleType="fitXY"/>
 
 
@@ -23,16 +24,15 @@
             android:id="@+id/home_tab_img2"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_margin="5px"
-            android:layout_weight="4"
+            android:layout_marginRight="5px"
+            android:layout_weight="3"
             android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_tab_img3"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_margin="5px"
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:scaleType="fitXY"
             />
 
@@ -40,32 +40,35 @@
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="450px"
+        android:layout_height="445px"
+        android:layout_marginTop="5px"
         android:orientation="horizontal">
+
 
         <ImageView
             android:id="@+id/home_tab_img4"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_margin="5px"
-            android:layout_weight="6"
+            android:layout_marginRight="5px"
+            android:layout_weight="5"
             android:scaleType="fitXY"/>
+
 
         <ImageView
             android:id="@+id/home_tab_img5"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_margin="5px"
-            android:layout_weight="4"
+            android:layout_marginRight="5px"
+            android:layout_weight="3"
             android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_tab_img6"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_margin="5px"
-            android:layout_weight="4"
-            android:scaleType="fitXY"/>
+            android:layout_weight="3"
+            android:scaleType="fitXY"
+            />
 
     </com.zhy.autolayout.AutoLinearLayout>
 
