--- a/app/src/main/res/layout/home_item_tab_title.xml
+++ b/app/src/main/res/layout/home_item_tab_title.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout
+<com.zhy.autolayout.AutoRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="120px"
     android:background="@color/bg_white"
+    android:layout_marginTop="20px"
     android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/home_tab_title"
-        android:layout_width="1400px"
-        android:layout_height="160px"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="95px"
+        android:layout_centerInParent="true"
         android:scaleType="fitXY"/>
 
-</com.zhy.autolayout.AutoLinearLayout>
+</com.zhy.autolayout.AutoRelativeLayout>
