--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="act_top_font">10sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="tv_line">2dp</dimen>
 </resources>
