修改首页数据加载方式，修复list位置错误

--- a/app/src/main/res/layout/activity_home_bottom.xml
+++ b/app/src/main/res/layout/activity_home_bottom.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="50dp"
+              android:layout_height="160px"
               android:background="@color/bg_white"
               android:orientation="horizontal">
 
@@ -9,24 +9,25 @@
         android:id="@+id/act_home_btn_home"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
         android:layout_weight="1"
+        android:layout_marginTop="25px"
         android:background="@color/colorTransparency"
         android:drawableTop="@drawable/selector_act_home_btn_home"
         android:gravity="center"
-        android:text="@string/act_home_bottom_shouye"
+        android:text="@string/act_home_bottom_index"
+        android:textSize="@dimen/tv_buttom_size"
         android:textColor="@drawable/selector_act_home_btn_text_color" />
 
     <Button
         android:id="@+id/act_home_btn_category"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
         android:layout_weight="1"
+        android:layout_marginTop="28px"
         android:background="@color/colorTransparency"
         android:drawableTop="@drawable/selector_act_home_btn_category"
         android:gravity="center"
-        android:text="@string/act_home_bottom_fenlei"
+        android:text="@string/act_home_bottom_category"
         android:textColor="@drawable/selector_act_home_btn_text_color" />
 
 
@@ -35,23 +36,23 @@
         android:id="@+id/act_home_btn_shopcar"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
         android:layout_weight="1"
+        android:layout_marginTop="20px"
         android:background="@color/colorTransparency"
         android:clickable="true"
         android:drawableTop="@drawable/selector_act_home_btn_shop_car"
-        android:text="@string/act_home_bottom_gouwuche"
+        android:text="@string/act_home_bottom_cart"
         android:textColor="@drawable/selector_act_home_btn_text_color" />
 
     <Button
         android:id="@+id/act_home_btn_mine"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
         android:layout_weight="1"
+        android:layout_marginTop="20px"
         android:background="@color/colorTransparency"
         android:drawableTop="@drawable/selector_act_home_btn_my"
         android:gravity="center"
-        android:text="@string/act_home_bottom_gerenzhongxin"
+        android:text="@string/act_home_bottom_mine"
         android:textColor="@drawable/selector_act_home_btn_text_color" />
-</LinearLayout>
+</com.zhy.autolayout.AutoLinearLayout>
