--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -6,7 +6,7 @@
     android:id="@+id/home_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorTransparency"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
@@ -15,14 +15,13 @@
         android:layout_height="?android:actionBarSize"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/act_home_btn_scan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40px"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="@color/colorTransparency"
             android:button="@null"
@@ -35,8 +34,9 @@
             android:id="@+id/frag_home_et_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="8"
+            android:layout_weight="6"
+            android:padding="20px"
+            android:layout_marginTop="20px"
             android:background="@drawable/search_bg"
             android:drawableLeft="@drawable/act_home_search"
             android:hint="搜索关键字"
@@ -50,6 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:background="@color/colorTransparency"
             android:button="@null"
             android:drawableTop="@drawable/act_home_msg"
