--- a/app/src/main/res/layout/home_item_goods.xml
+++ b/app/src/main/res/layout/home_item_goods.xml
@@ -3,16 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="650px"
-    android:layout_margin="10px"
+    android:layout_height="710px"
+    android:layout_margin="5px"
     android:background="@color/bg_white"
     android:orientation="vertical">
 
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="450px"
-        android:layout_margin="25px">
+        android:layout_height="540px">
 
         <ImageView
             android:id="@+id/home_goods_img"
@@ -26,7 +25,7 @@
     <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="25px">
+        android:layout_margin="20px">
 
         <TextView
             android:id="@+id/home_goods_name"
@@ -37,7 +36,7 @@
             android:fontFamily="sans-serif-condensed"
             android:text="零度智控DOBBY跟拍口袋无人机 智能高清便携 礼盒版"
             android:textColor="@color/tv_name"
-            android:textSize="45px"/>
+            android:textSize="40px"/>
 
         <TextView
             android:id="@+id/tv_goods_price"
@@ -46,7 +45,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:text="$55.3"
-            android:textSize="42px"
+            android:textSize="38px"
             android:textColor="@color/tv_price"/>
 
         <TextView
@@ -54,9 +53,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_marginLeft="30px"
+            android:layout_toRightOf="@+id/tv_goods_price"
             android:text="23334人购买"
-            android:textSize="42px"
+            android:textSize="34px"
             android:textColor="@color/tv_hint"/>
     </com.zhy.autolayout.AutoRelativeLayout>
 
