--- a/app/src/main/res/layout/home_top.xml
+++ b/app/src/main/res/layout/home_top.xml
@@ -14,52 +14,46 @@
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="355px"
+        android:layout_height="265px"
         android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/home_menu_1"
-            android:layout_width="170px"
-            android:layout_height="255px"
+            android:layout_width="132px"
+            android:layout_height="185px"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="40px"
-
+            android:layout_marginLeft="50px"
             android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_menu_2"
-            android:layout_width="170px"
-            android:layout_height="255px"
-            android:layout_marginLeft="121px"
+            android:layout_width="132px"
+            android:layout_height="185px"
+            android:layout_marginLeft="80px"
             android:layout_toRightOf="@id/home_menu_1"
-
             android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_menu_3"
-            android:layout_width="170px"
-            android:layout_height="255px"
+            android:layout_width="132px"
+            android:layout_height="185px"
             android:layout_centerHorizontal="true"
-
-            android:scaleType="fitXY"
-            />
+            android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_menu_4"
-            android:layout_width="170px"
-            android:layout_height="255px"
-            android:layout_marginLeft="121px"
+            android:layout_width="132px"
+            android:layout_height="185px"
+            android:layout_marginLeft="80px"
             android:layout_toRightOf="@id/home_menu_3"
-
             android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_menu_5"
-            android:layout_width="170px"
-            android:layout_height="255px"
+            android:layout_width="132px"
+            android:layout_height="185px"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="40px"
-
+            android:layout_marginRight="50px"
             android:scaleType="fitXY"/>
 
     </com.zhy.autolayout.AutoRelativeLayout>
@@ -71,7 +65,7 @@
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
-        android:layout_height="145px"
+        android:layout_height="105px"
         android:orientation="horizontal">
 
         <TextView
@@ -83,22 +77,22 @@
             android:layout_weight="2.2"
             android:text="最新动态:"
             android:textColor="@color/tv_name"
-            android:textSize="55px"/>
+            android:textSize="40px"/>
 
         <com.sunfusheng.marqueeview.MarqueeView
             android:id="@+id/marqueeView"
             android:layout_width="0dp"
-            android:layout_height="80px"
+            android:layout_height="55px"
             android:layout_gravity="center_vertical"
             android:layout_weight="9"
             app:mvAnimDuration="1000"
             app:mvInterval="3000"
             app:mvTextColor="@color/tv_hint"
-            app:mvTextSize="48px"/>
+            app:mvTextSize="38px"/>
 
         <View
-            android:layout_width="2.5px"
-            android:layout_height="45px"
+            android:layout_width="3px"
+            android:layout_height="30px"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="40px"
             android:layout_marginLeft="40px"
@@ -112,7 +106,7 @@
             android:layout_weight="1"
             android:text="更多"
             android:textColor="@color/tv_name"
-            android:textSize="50px"/>
+            android:textSize="38px"/>
     </com.zhy.autolayout.AutoLinearLayout>
 
 
