--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#056f00</color>
+    <color name="colorPrimary">#1da039</color>
     <color name="colorPrimaryDark">#0d5302</color>
     <color name="colorAccent">#0091ea</color>
 
