--- a/app/src/main/res/layout/category_header.xml
+++ b/app/src/main/res/layout/category_header.xml
@@ -3,7 +3,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/home_toolbar"
+    android:id="@+id/category_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
     app:contentInsetLeft="0dp"
@@ -18,7 +18,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/act_home_btn_scan"
+            android:id="@+id/category_btn_scan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -32,7 +32,7 @@
             android:textSize="@dimen/act_top_font"/>
 
         <EditText
-            android:id="@+id/frag_home_et_search"
+            android:id="@+id/category_et_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -44,10 +44,10 @@
             android:singleLine="true"
             android:textColor="@color/tv_name"
             android:textColorHint="@color/tv_hint"
-            android:textSize="50px"/>
+            android:textSize="4px"/>
 
         <Button
-            android:id="@+id/act_home_btn_msg"
+            android:id="@+id/category_btn_msg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
