--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,15 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                     android:layout_width="match_parent"
+                                     android:layout_height="match_parent"
+
+                                     android:orientation="vertical">\
+
+    <include layout="@layout/mine_header"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_white"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:layout_width="256px"
+            android:layout_height="256px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50px"
+            android:background="@drawable/mine_logo"/>
+
+
+        <LinearLayout
+            android:layout_width="810px"
+            android:layout_height="110px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="175px"
+            android:background="@drawable/button__n_bg"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="58px"
+                android:layout_height="58px"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="50px"
+                android:background="@drawable/ic_login_name"/>
+
+            <View
+                android:layout_width="2px"
+                android:layout_height="77px"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30px"
+                android:background="@color/colorPrimary"/>
+
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">\
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30px"
+                android:background="@null"
+                android:hint="手机/会员名/邮箱"
+                android:textColor="@color/tv_name"
+                android:textColorHint="@color/tv_hint"
+                android:textSize="42px"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="810px"
+            android:layout_height="110px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="60px"
+            android:background="@drawable/button__n_bg"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="50px"
+                android:layout_height="60px"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="50px"
+                android:background="@drawable/ic_login_pws"/>
+
+            <View
+                android:layout_width="2px"
+                android:layout_height="77px"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30px"
+                android:background="@color/colorPrimary"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="30px"
+                android:background="@null"
+                android:hint="手机/会员名/邮箱"
+                android:textColor="@color/tv_name"
+                android:textColorHint="@color/tv_hint"
+                android:textSize="42px"/>
+
+        </LinearLayout>
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="个人中心"
-        android:textSize="36sp"/>
+        <com.zhy.autolayout.AutoRelativeLayout
+            android:layout_width="810px"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30px">
 
-</RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="5px"
+                android:text="快捷登录"
+                android:textColor="@color/colorPrimary"
+                android:textSize="40px"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:text="忘记密码?"
+                android:textColor="@color/colorPrimary"
+                android:textSize="40px"/>
+
+        </com.zhy.autolayout.AutoRelativeLayout>
+
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="810px"
+            android:layout_height="110px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="65px"
+            android:background="@drawable/button_bg"
+            android:text="登录"
+            android:textColor="@color/bg_white"
+            android:textSize="45px"/>
+
+        <RelativeLayout
+            android:layout_width="810px"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="120px">
+
+            <View
+                android:layout_width="230px"
+                android:layout_height="1px"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:background="@color/tv_hint"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="或用以下账号登录"
+                android:textSize="40px"/>
+
+            <View
+                android:layout_width="230px"
+                android:layout_height="1px"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@color/tv_hint"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="775px"
+            android:layout_height="123px"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="105px"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="123px"
+                android:layout_height="123px"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/qq"/>
+
+            <ImageView
+                android:layout_width="123px"
+                android:layout_height="123px"
+                android:layout_centerInParent="true"
+                android:background="@drawable/weixin"/>
+
+            <ImageView
+                android:layout_width="123px"
+                android:layout_height="123px"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/weibo"/>
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+
+</com.zhy.autolayout.AutoLinearLayout>
