--- a/app/src/main/res/layout/home_item_tab_title.xml
+++ b/app/src/main/res/layout/home_item_tab_title.xml
@@ -12,8 +12,7 @@
         android:id="@+id/home_tab_title"
         android:layout_width="wrap_content"
         android:layout_height="60px"
-        android:layout_marginLeft="320px"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:scaleType="fitXY"/>
 
 </com.zhy.autolayout.AutoRelativeLayout>
