--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -16,16 +16,49 @@
         android:layout_marginTop="5px"
         android:orientation="horizontal">
 
+        <ScrollView
+            android:id="@+id/svGoodsClassRoot"
+            android:layout_width="250px"
+            android:layout_height="fill_parent"
+            android:background="@color/bg_white"
+            android:overScrollMode="never"
+            android:scrollbars="none">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/category_ll_one"
-            android:layout_width="200px"
-            android:layout_height="match_parent"/>
+            <com.zhy.autolayout.AutoLinearLayout
+                android:id="@+id/llGoodsClassRoot"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"/>
+        </ScrollView>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/category_ll_two"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+        <GridView
+            android:id="@+id/gvBrand"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="5px"
+            android:background="@color/bg_white"
+            android:horizontalSpacing="8px"
+            android:numColumns="3"
+            android:verticalSpacing="4px"/>
+
+        <ScrollView
+            android:id="@+id/svGoodsClass"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:overScrollMode="never"
+            android:scrollbars="none">
+
+            <com.zhy.autolayout.AutoLinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.zhy.autolayout.AutoLinearLayout
+                    android:id="@+id/llGoodsClass"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"/>
+            </com.zhy.autolayout.AutoLinearLayout>
+        </ScrollView>
     </com.zhy.autolayout.AutoLinearLayout>
 </com.zhy.autolayout.AutoLinearLayout>
