--- a/app/src/main/res/layout/home_item_goods.xml
+++ b/app/src/main/res/layout/home_item_goods.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="280dp"
-    android:layout_margin="2dp"
+    android:layout_height="900px"
+    android:layout_margin="10px"
     android:background="@color/bg_white"
     android:orientation="vertical">
 
-
     <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="520px">
+        android:layout_height="400px"
+        android:layout_margin="25px">
 
         <ImageView
             android:id="@+id/home_goods_img"
@@ -24,8 +24,8 @@
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_margin="20px">
+        android:layout_height="300px"
+        android:padding="20px">
 
         <TextView
             android:id="@+id/home_goods_name"
@@ -33,12 +33,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:ellipsize="end"
             android:fontFamily="sans-serif-condensed"
-            android:maxLines="2"
             android:text="零度智控DOBBY跟拍口袋无人机 智能高清便携 礼盒版"
             android:textColor="@color/tv_name"
-            android:textSize="15sp"/>
+            android:textSize="45px"/>
 
         <TextView
             android:id="@+id/tv_goods_price"
@@ -47,20 +45,18 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:text="$55.3"
-            android:textColor="@color/tv_price"
-            android:textSize="13sp"/>
+            android:textSize="42px"
+            android:textColor="@color/tv_price"/>
 
         <TextView
             android:id="@+id/tv_goods_buynum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="30px"
-            android:layout_toRightOf="@+id/tv_goods_price"
+            android:layout_alignParentRight="true"
             android:text="23334人购买"
-            android:textColor="@color/tv_hint"
-            android:textSize="12sp"/>
+            android:textSize="42px"
+            android:textColor="@color/tv_hint"/>
     </com.zhy.autolayout.AutoRelativeLayout>
 
 </com.zhy.autolayout.AutoLinearLayout>
-
