--- a/app/src/main/res/layout/category_item_class.xml
+++ b/app/src/main/res/layout/category_item_class.xml
@@ -13,7 +13,7 @@
         android:id="@+id/rlGoodClass"
         android:layout_width="fill_parent"
         android:layout_height="36.0dip"
-        android:background="@color/bg_light">
+        android:background="@color/bg_gray">
 
         <ImageView
             android:id="@+id/tvGoodsClassDot"
