--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -21,6 +21,7 @@
             android:layout_width="250px"
             android:layout_height="fill_parent"
             android:background="@color/bg_white"
+            android:layout_marginRight="20px"
             android:overScrollMode="never"
             android:scrollbars="none">
 
@@ -36,7 +37,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginLeft="5px"
-            android:background="@color/bg_white"
+            android:background="@color/bg_gray"
             android:horizontalSpacing="8px"
             android:numColumns="3"
             android:verticalSpacing="4px"/>
