--- a/app/src/main/res/layout/category_item_brand.xml
+++ b/app/src/main/res/layout/category_item_brand.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/llBrandItem"
-              android:layout_width="match_parent"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_margin="5dp"
               android:background="@color/bg_white"
-              android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
-              android:orientation="vertical"
-              android:padding="5dp">
+              android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/ivBrandPic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:adjustViewBounds="true"
-        android:clickable="false"
-        android:focusable="false"
-        android:scaleType="centerCrop"/>
+    <com.zhy.autolayout.AutoRelativeLayout
+        android:layout_width="300px"
+        android:layout_height="230px"
+        android:padding="10px">
 
-    <TextView
-        android:id="@+id/tvBrandName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
-        android:singleLine="true"
-        android:textColor="@color/tv_name"
-        android:textSize="40px"/>
+        <ImageView
+            android:id="@+id/ivBrandPic"
+            android:layout_width="150px"
+            android:layout_height="60px"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10px"
+            android:adjustViewBounds="true"
+            android:clickable="false"
+            android:focusable="false"
+            android:scaleType="fitXY"/>
+
+        <TextView
+            android:id="@+id/tvBrandName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:singleLine="true"
+            android:text="XXXX"
+            android:textColor="@color/tv_brand"
+            />
+
+
+    </com.zhy.autolayout.AutoRelativeLayout>
+
 </LinearLayout>
