--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -9,6 +9,10 @@
 
     <include layout="@layout/category_header"/>
 
+    <com.youth.xframe.widget.loadingview.XLoadingView
+        android:id="@+id/category_loadingView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="fill_parent"
@@ -18,9 +22,9 @@
 
         <ScrollView
             android:id="@+id/svGoodsClassRoot"
-            android:layout_width="250px"
+            android:layout_width="240px"
             android:layout_height="fill_parent"
-            android:background="@color/bg_white"
+            android:background="@color/bg_gray"
             android:layout_marginRight="20px"
             android:overScrollMode="never"
             android:scrollbars="none">
@@ -32,15 +36,20 @@
                 android:orientation="vertical"/>
         </ScrollView>
 
-        <GridView
-            android:id="@+id/gvBrand"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginLeft="5px"
-            android:background="@color/bg_gray"
-            android:horizontalSpacing="8px"
-            android:numColumns="3"
-            android:verticalSpacing="4px"/>
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginRight="10px"
+          android:orientation="vertical">
+          <ImageView
+              android:id="@+id/cagetory_img"
+              android:layout_width="match_parent"
+              android:layout_height="350px"
+              android:layout_marginTop="5px"
+              android:background="@color/bg_white"
+              android:scaleType="fitXY"
+              android:layout_gravity="center_horizontal"/>
+
 
         <ScrollView
             android:id="@+id/svGoodsClass"
@@ -61,5 +70,7 @@
                     android:orientation="vertical"/>
             </com.zhy.autolayout.AutoLinearLayout>
         </ScrollView>
+      </LinearLayout>
     </com.zhy.autolayout.AutoLinearLayout>
+    </com.youth.xframe.widget.loadingview.XLoadingView>
 </com.zhy.autolayout.AutoLinearLayout>
